# projeto-predicao-sucesso

./: .gitignore  README.md  create_files.py  main.py  pyproject.toml  test_api.py  test_training.py
data/: data_script.py  projetos.csv  usuarios.csv
models/: feature_names.pkl  label_encoders.pkl  modelo_projetos.pkl  scaler.pkl
src/api/: main.py
src/chatbot/: app.py
src/model/: predict.py  train.py
